--- a/tensor2tensor/notebooks/hello_t2t.ipynb
+++ b/tensor2tensor/notebooks/hello_t2t.ipynb
@@ -117,10 +117,10 @@
         "Modes = tf.estimator.ModeKeys\n",
         "\n",
         "# Setup some directories\n",
-        "data_dir = os.path.expanduser(\"~/t2t/data\")\n",
-        "tmp_dir = os.path.expanduser(\"~/t2t/tmp\")\n",
-        "train_dir = os.path.expanduser(\"~/t2t/train\")\n",
-        "checkpoint_dir = os.path.expanduser(\"~/t2t/checkpoints\")\n",
+        "data_dir = os.path.expanduser(\"/tmp/t2t/data\")\n",
+        "tmp_dir = os.path.expanduser(\"/tmp/t2t/tmp\")\n",
+        "train_dir = os.path.expanduser(\"/tmp/t2t/train\")\n",
+        "checkpoint_dir = os.path.expanduser(\"/tmp/t2t/checkpoints\")\n",
         "tf.gfile.MakeDirs(data_dir)\n",
         "tf.gfile.MakeDirs(tmp_dir)\n",
         "tf.gfile.MakeDirs(train_dir)\n",
